# Artifical-Audio-Data-Genaration-Moshi

./: .gitignore  README.md  config.yaml  output.json  pyproject.toml  requirements.txt
conversations/: example_gujarati.json
conversations_generator/: config.json.example  configuration_reader.py  loaders.py  logger.py  migrate_storage.py  models.py  prompts.py  runner.py  settings.py  token_stats.py  usage_tracker.py  wandb_logger.py
conversations_generator/agents/: __init__.py  base_agent.py  conversation_content_validator_agent.py  conversation_editor_agent.py  conversation_fixer_agent.py  conversation_format_validator_agent.py  conversation_formatter_agent.py  conversation_generator_agent.py  conversation_validator_agent.py  conversation_validator_manual.py  topic_generator_agent.py
conversations_generator/data/: conversation_field_schema.json  conversation_fixer_prompt.md  corpus_instances.jsonl
conversations_generator/llm/: __init__.py  base_llm.py  factory.py  gemini_llm.py  gemma4_local_llm.py  groq_llm.py  inception_llm.py  krutrim_llm.py  openai_llm.py  sarvam_llm.py
datagen/: __init__.py  cli.py  config.py  factory.py  manifest.py  models.py  pipeline.py  runner.py
tests/: conftest.py  test_aligner.py  test_build_alignments.py  test_config.py  test_load_script.py  test_patch_engine.py  test_pipeline_integration.py  test_schedule_stage.py  test_scheduler.py  test_voice_collection_speaker_selector.py
voice_collection/: README.md  __init__.py  config.json.example  configuration_reader.py  exporter.py  logger.py  models.py  pipeline.py  runner.py
(+51 files in other folders)
