[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datagen"
version = "0.1.0"
description = "Synthetic two-speaker conversational audio generator for Moshi full-duplex training"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "soundfile>=0.12",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "transformers>=4.40",
    "ctc-forced-aligner",
    "sphn==0.1.12",
]
llm = [
    "google-genai>=1.0",   # GeminiLLM
    "groq>=0.11",          # GroqLLM
    "langfuse>=2.0",       # Prompt management
    "wandb>=0.17",         # Token usage / progress dashboards
]

[tool.setuptools.packages.find]
include = ["datagen*", "conversations_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
datagen = "datagen.cli:main"
